# frappe_shopping_list

./: README.md  pyproject.toml
frappe_shopping_list/: hooks.py  modules.txt
frappe_shopping_list/frappe_shopping_list/doctype/list_chld/: list_chld.json  list_chld.py
frappe_shopping_list/frappe_shopping_list/doctype/product/: product.js  product.json  product.py  test_product.py
frappe_shopping_list/frappe_shopping_list/doctype/shopping_list/: shopping_list.js  shopping_list.json  shopping_list.py  temp_shopping_list.js  test_shopping_list.py
frappe_shopping_list/frappe_shopping_list/doctype/taken_chld/: taken_chld.json  taken_chld.py
frappe_shopping_list/frappe_shopping_list/doctype/units/: test_units.py  units.js  units.json  units.py
frappe_shopping_list/frappe_shopping_list/workspace/shop/: shop.json
